[package]
name = "revive"
version = "0.1.0"
edition = "2021"
authors = ["Zahash <zahash.z@gmail.com>"]
description = "ui framework built on top of reactivate"
license = "MIT"
repository = "https://github.com/zahash/revive"

[dependencies]
reactivate = "0.4"

winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# wasm-bindgen = "0.2"
# web-sys = { version = "0.3", features = [
#     'Window',
#     'Document',
#     'Element',
#     'Event',
#     'Text',
#     'HtmlElement',
# ] }
